--- a/Prueba1/src/app/components/login/login.component.html
+++ b/Prueba1/src/app/components/login/login.component.html
@@ -1,1 +1,24 @@
-<p>login works!</p>
+
+<div class="container h-screen w-full flex justify-content-center align-items-center">
+  <div class="surface-card p-4 shadow-2 border-round w-full lg:w-6">
+    <div class="text-center mb-5">
+        <div class="text-900 text-3xl font-medium mb-3"> Bienvenido </div>
+        <span class="text-600 font-medium line-height-3"> ¿No tienes una cuenta? </span>
+        <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer"> ¡Crea una! </a>
+    </div>
+
+    <div>
+        <label for="email1" class="block text-900 font-medium mb-2"> Correo electrónico </label>
+        <input id="email1" type="text" placeholder="correo" pInputText class="w-full mb-3">
+
+        <label for="password1" class="block text-900 font-medium mb-2"> Contraseña </label>
+        <input id="password1" type="password" placeholder="contraseña" pInputText class="w-full mb-3">
+
+        <div class="flex align-items-center justify-content-between mb-6">
+            <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer"> ¿Olvidó la contraseña? </a>
+        </div>
+
+        <button pButton pRipple label="Ingresar" icon="pi pi-user" class="w-full"></button>
+    </div>
+  </div>
+</div>
