--- a/Prueba1/src/app/components/register/register.component.html
+++ b/Prueba1/src/app/components/register/register.component.html
@@ -1,1 +1,18 @@
-<p>register works!</p>
+<div class="container h-screen w-full flex justify-content-center align-items-center">
+  <div class="surface-card p-4 shadow-2 border-round w-full lg:w-6">
+    <div class="text-center mb-5">
+        <div class="text-900 text-3xl font-medium mb-3"> Crear una cuenta </div>
+    </div>
+
+    <div>
+        <label for="email1" class="block text-900 font-medium mb-2"> Correo electrónico </label>
+        <input id="email1" type="text" placeholder="correo" pInputText class="w-full mb-3">
+
+        <label for="password1" class="block text-900 font-medium mb-2"> Contraseña </label>
+        <input id="password1" type="password" placeholder="contraseña" pInputText class="w-full mb-3">
+
+        <button pButton pRipple label="Registrarse" icon="pi pi-user" class="w-full"></button>
+    </div>
+  </div>
+</div>
+
