--- a/Prueba1/src/styles.scss
+++ b/Prueba1/src/styles.scss
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap'); //fuente de letra
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap'); //fuente de letra
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: content-box;
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'Montserrat', sans-serif;
 }
