--- a/Prueba1/src/app/components/login/login.component.html
+++ b/Prueba1/src/app/components/login/login.component.html
@@ -8,17 +8,13 @@
     </div>
 
     <div>
-        <label for="email1" class="block text-900 font-medium mb-2"> Correo electrónico </label>
-        <input id="email1" type="text" placeholder="correo" pInputText class="w-full mb-3">
+        <label for="email1" class="block text-900 font-medium mb-2"> Email </label>
+        <input id="email1" type="text" name="email" [(ngModel)]="loginUser.email" placeholder="email" pInputText class="w-full mb-3">
 
-        <label for="password1" class="block text-900 font-medium mb-2"> Contraseña </label>
-        <input id="password1" type="password" placeholder="contraseña" pInputText class="w-full mb-3">
+        <label for="password1" class="block text-900 font-medium mb-2"> Password </label>
+        <input id="password1" type="password" name="password" [(ngModel)]="loginUser.password" placeholder="password" pInputText class="w-full mb-3">
 
-        <div class="flex align-items-center justify-content-between mb-6">
-            <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer"> ¿Olvidó la contraseña? </a>
-        </div>
-
-        <button pButton pRipple label="Ingresar" icon="pi pi-user" class="w-full"></button>
+        <button (click)="login(loginUser)" pButton pRipple label="Ingresar" icon="pi pi-user" class="w-full"></button>
     </div>
   </div>
 </div>
