--- a/Prueba1/src/app/components/register/register.component.html
+++ b/Prueba1/src/app/components/register/register.component.html
@@ -5,13 +5,13 @@
     </div>
 
     <div>
-        <label for="email1" class="block text-900 font-medium mb-2"> Correo electrónico </label>
-        <input id="email1" type="text" placeholder="correo" pInputText class="w-full mb-3">
+        <label for="email1" class="block text-900 font-medium mb-2"> Email </label>
+        <input id="email1" name="email" type="text" [(ngModel)]="registerUser.email" placeholder="email" pInputText class="w-full mb-3">
 
-        <label for="password1" class="block text-900 font-medium mb-2"> Contraseña </label>
-        <input id="password1" type="password" placeholder="contraseña" pInputText class="w-full mb-3">
+        <label for="password1" class="block text-900 font-medium mb-2"> Password </label>
+        <input id="password1" name="password" type="password" [(ngModel)]="registerUser.password" placeholder="password" pInputText class="w-full mb-3">
 
-        <button pButton pRipple label="Registrarse" icon="pi pi-user" class="w-full"></button>
+        <button (click)="register(registerUser)" pButton pRipple label="Registrarse" icon="pi pi-user" class="w-full"></button>
     </div>
   </div>
 </div>
