--- a/Prueba1/src/app/components/login/login.component.html
+++ b/Prueba1/src/app/components/login/login.component.html
@@ -3,8 +3,6 @@
   <div class="surface-card p-4 shadow-2 border-round w-full lg:w-6">
     <div class="text-center mb-5">
         <div class="text-900 text-3xl font-medium mb-3"> Bienvenido </div>
-        <span class="text-600 font-medium line-height-3"> ¿No tienes una cuenta? </span>
-        <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer"> ¡Crea una! </a>
     </div>
 
     <div>
@@ -13,6 +11,11 @@
 
         <label for="password1" class="block text-900 font-medium mb-2"> Password </label>
         <input id="password1" type="password" name="password" [(ngModel)]="loginUser.password" placeholder="password" pInputText class="w-full mb-3">
+
+        <div class="text-center mb-5">
+          <span class="text-600 font-medium line-height-3"> ¿No tienes una cuenta? </span>
+          <a href="register" style="color:green;" class="font-medium no-underline ml-2 text-blue-500 cursor-pointer"> Crear cuenta </a>
+        </div>
 
         <button (click)="login(loginUser)" pButton pRipple label="Ingresar" icon="pi pi-user" class="w-full"></button>
     </div>
