--- a/Prueba1/src/app/components/register/register.component.html
+++ b/Prueba1/src/app/components/register/register.component.html
@@ -11,7 +11,11 @@
         <label for="password1" class="block text-900 font-medium mb-2"> Password </label>
         <input id="password1" name="password" type="password" [(ngModel)]="registerUser.password" placeholder="password" pInputText class="w-full mb-3">
 
-        <button (click)="register(registerUser)" pButton pRipple label="Registrarse" icon="pi pi-user" class="w-full"></button>
+        <div class="text-center mb-5">
+          <a href="login" style="color:green;" class="font-medium no-underline ml-2 text-blue-500 cursor-pointer"> Volver </a>
+        </div>
+
+        <button (click)="register(registerUser)" pButton pRipple label="Registrarse" icon="pi pi-user-plus" class="w-full"></button>
     </div>
   </div>
 </div>
